# libfatctl

./: README.md  meson.build  meson_options.txt
include/_user/: meson.build
include/fatctl/: allh.h  cntl.h  dirs.h  fdio.h  full.h  info.h  link.h  lock.h  meson.build  mode.h  open.h  path.h  perm.h  poll.h  stat.h  what.h  wrap.h
samples/: dirinfo.cpp  dirtest.cpp  sysroot.cpp  sysroot.h
src/: dbg.h  dir.cpp  dir.h  fatdir.h  fsi.cpp  meson.build  osh.cpp  out.cpp  std.h
