option('filesystem', type: 'string', value: 'std::filesystem', description:
  'Namespace of <filesystem>. Does not affect public API of libfatctl itself.')
option('usentquery', type: 'boolean', value: true, description:
  'Allow the use of NtQuery* (internal/deprecated) functions to provide F_GETFL.')
option('fcntlflock', type: 'boolean', value: false, description:
  'Emulate flock() with full-range fcntl() locks (NFS behavior on Linux).')
